--- a/platforms/browser/www/css/app.css
+++ b/platforms/browser/www/css/app.css
@@ -13,7 +13,12 @@
     right: 0;
     bottom: 20px;
     background: rgba(0,0,0,.8);
-    border-radius: 100%;
+    border-radius: 10px;
     color: #fff;
+    padding: 8px;
+}
+
+.profile-edit-icon{
+    border-radius: 100%;
     padding: 5px;
 }
