--- a/www/css/app.css
+++ b/www/css/app.css
@@ -22,3 +22,28 @@
     border-radius: 100%;
     padding: 5px;
 }
+
+.grid-action{
+    
+}
+
+.grid-action > img{
+    opacity: 0.2;
+}
+
+.grid-action > .label{
+    min-height: 30px;
+    font-size: 12px;
+}
+
+
+/**
+ * extensions of the phonon css utils
+ */
+.column-border-right{
+    border-right: 1px solid #eee;
+}
+
+.row-border-bottom{
+    border-bottom: 1px solid #eee;
+}
